feat: remove leftover module export of org.lwjgl/org.lwjgl.system.ffm to org.lwjgl.sdl