@@ -83,7 +83,6 @@ val runJvmArgs =
         listOf(
             "-Xms24m",
             "-Xmx48m",
-            "--add-exports=org.lwjgl/org.lwjgl.system.ffm=org.lwjgl.sdl",
             "--enable-native-access=$mainModule,com.formdev.flatlaf,org.lwjgl",
             "--illegal-final-field-mutation=deny",
         )
